--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
                 <p>v1.0</p>
             </div>
             <nav class="nav">
+                <a class="nav__tab" href="https://50objectlimitlevellist.pages.dev/#/">
+                    <span class="type-label-lg">10OLLL</span>
+                </a>
                 <router-link class="nav__tab" to="/">
-                    <span class="type-label-lg">List</span>
+                    <span class="type-label-lg">50OLLL</span>
                 </router-link>
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
