--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>v1.0</p>
             </div>
             <nav class="nav">
-                <a class="nav__tab" href="https://50objectlimitlevellist.pages.dev/#/">
+                <a class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/">
                     <span class="type-label-lg">10OLLL</span>
                 </a>
                 <router-link class="nav__tab" to="/">
