--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
                 <router-link class="nav__tab" to="/">
                     <span class="type-label-lg">50OLLL</span>
                 </router-link>
+                 <router-link class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/leaderboard/#/">
+                    <span class="type-label-lg">10 Leaderboard</span>
+                </router-link>
                 <router-link class="nav__tab" to="/leaderboard">
-                    <span class="type-label-lg">Leaderboard</span>
+                    <span class="type-label-lg">50 Leaderboard</span>
                 </router-link>
                 <router-link class="nav__tab" to="/roulette">
                     <span class="type-label-lg">Roulette</span>
