--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <span class="type-label-lg">50OLLL</span>
                 </router-link>
                 <a class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/leaderboard/#/">
-                    <span class="type-label-lg">     10 Leaderboard</span>
+                    <span class="type-label-lg">10 Objects Leaderboard</span>
                 </a>
                 <router-link class="nav__tab" to="/leaderboard">
-                    <span class="type-label-lg">     50 Leaderboard</span>
+                    <span class="type-label-lg">50 Objects Leaderboard</span>
                 </router-link>
                 <div class="nav__actions">
                     <button
