--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>50OLLL</h2>
-                <p>v1.0</p>
+                <h2>OLLL</h2>
+                <p>v1.1</p>
             </div>
             <nav class="nav">
                 <a class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/">
