--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </div>
             <nav class="nav">
                 <a class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/">
-                    <span class="type-label-lg">10 Object</span>
+                    <span class="type-label-lg">10 Objects</span>
                 </a>
                 <router-link class="nav__tab" to="/">
-                    <span class="type-label-lg">50 Object</span>
+                    <span class="type-label-lg">50 Objects</span>
                 </router-link>
                 <a class="nav__tab" href="https://objectlimitlevellist.pages.dev/#/leaderboard/#/">
                     <span class="type-label-lg">10 Objects Leaderboard</span>
